@@ -32,8 +32,8 @@ import compiler.lib.ir_framework.*;
  * @summary Missing InlineTypeNode re-materialization during type sharpening.
  * @library /test/lib /
  * @enablePreview
- * @compile --add-exports java.base/jdk.internal.misc=ALL-UNNAMED TestValueRematDuringTypeSharpening.java
- * @run main/othervm/timeout=300 --add-exports java.base/jdk.internal.misc=ALL-UNNAMED compiler.valhalla.inlinetypes.TestValueRematDuringTypeSharpening
+ * @modules java.base/jdk.internal.misc
+ * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestValueRematDuringTypeSharpening
  */
 
 abstract value class topValue {
